<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAwesomeStuff</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="activity_main_btn1">Material Design</string>
    <string name="activity_main_btn2">Style</string>
    <string name="activity_main_btn3">Layout</string>
    <string name="activity_main_btn4">Components</string>
    <string name="activity_main_btn5">Pattern</string>
    <string name="activity_main_btn6">Animations</string>
    <string name="activity_main_btn7">Cool-Stuff!!!</string>

</resources>
