<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/btn_materialDesign"
                android:text="@string/activity_main_btn1"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_lime"
                android:fontFamily="sans-serif-thin"
                android:textSize="@dimen/text_size_display_1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_style"
                android:text="@string/activity_main_btn2"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_pink"
                android:textSize="@dimen/text_size_subhead"
                android:fontFamily="sans-serif-condensed"
                />
            <Button
                android:id="@+id/btn_layout"
                android:text="@string/activity_main_btn3"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_lightgreen"
                android:textSize="@dimen/text_size_subhead"
                android:fontFamily="sans-serif-condensed"
                />
            <Button
                android:id="@+id/btn_components"
                android:text="@string/activity_main_btn4"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_indigo"
                android:textSize="@dimen/text_size_subhead"
                android:fontFamily="sans-serif-condensed"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_patterns"
                android:text="@string/activity_main_btn5"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_teal"
                android:textSize="@dimen/text_size_title"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_animations"
                android:text="@string/activity_main_btn6"
                android:layout_width="0dp"
                android:layout_height="@dimen/activity_main_table_cell_height"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:background="@drawable/btn_bg_orange"
                android:textSize="@dimen/text_size_title"
                android:fontFamily="sans-serif"
                />

        </TableRow>
    </TableLayout>
</ScrollView>